<resources>
    <string name="app_name">Medbron</string>
    <string name="sign_in">Sign in</string>
    <string name="ssn">Social Security Number</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign out</string>

    <string translatable="false" name="default_notification_channel_id">notification_id</string>
    <string name="patient">Patient</string>
    <string name="health_care_provider">Health Care Provider</string>
    <string name="sign_in_hcp">Sign in as Health Care Provider</string>
    <string name="email">Email</string>
    <string name="send_request">Send request</string>
    <string name="request_data_for_patient">Request data for patient</string>
    <string name="send_request_for_data_title">Request data for patient</string>
    <string name="patient_ssn">Patient\'s ssn</string>
    <string name="consent_channel_name">Consent notification</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="sign_in_as_patient">Sign in as patient</string>
    <string name="fetch_journals">Fetch journals</string>
    <string name="fetch_journals_for_patient">Fetch journals for %s</string>
    <string name="face_sheet">Journal item - Face Sheet</string>
    <string name="send_emergency_request">Send emergancy request to next of kin</string>
</resources>
