<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInTitleTV"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/sign_in_hcp"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            app:layout_constraintTop_toBottomOf="@+id/signInTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/sign_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>