<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signInTitleTV"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/sign_in_as_patient"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ssnET"
            app:layout_constraintTop_toBottomOf="@+id/signInTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ssn"
            android:inputType="number"
            android:layout_margin="@dimen/activity_margin"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/ssnET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="@dimen/activity_margin"
            android:inputType="textPassword"
            android:padding="@dimen/activity_margin"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
    android:text="@string/sign_in"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>