<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/requestDataTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/activity_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/send_request_for_data_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
            app:layout_constraintTop_toBottomOf="@id/requestDataTitle"
            android:id="@+id/ssnET"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="@dimen/activity_margin"
            android:hint="@string/patient_ssn"/>

    <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@+id/ssnET"
            android:id="@+id/sendRequestBtn"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/send_request"/>

    <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toBottomOf="@id/ssnET"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/medicalTV"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The patient is having a medical emergancy and cannot provide consent."
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toBottomOf="@+id/medicalTV"
            android:id="@+id/nextOfKinBtn"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/send_emergency_request"/>

</androidx.constraintlayout.widget.ConstraintLayout>