<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTV"
            tools:text="@string/fetch_journals_for_patient"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fetchJournalsBtn"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/fetch_journals"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/openPdf"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/face_sheet"
    android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>